# wc-score-prediction

./: .gitignore  README.md  dev-plan.md  dev-spec.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  retrain.yml
app/: streamlit_app.py
configs/: model_config.yaml  team_name_map.yaml  world_cup_2026_teams.yaml
docs/: manual_qa_checklist.md
scripts/: azure_setup.sh  start.sh
src/wc_predictor/: __init__.py  streamlit_support.py
src/wc_predictor/data/: __init__.py  load_data.py  normalize_teams.py  validate_data.py
src/wc_predictor/evaluation/: __init__.py  backtest.py  metrics.py
src/wc_predictor/features/: __init__.py  elo.py  feature_builder.py  rolling_features.py  weights.py
src/wc_predictor/models/: __init__.py  artifact.py  dixon_coles.py  ensemble.py  poisson_baseline.py  predict.py  team_strength.py  train.py  train_app_model.py
src/wc_predictor/presentation/: __init__.py  confidence.py  formatting.py
src/wc_score_prediction.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: helpers.py  test_data_validation.py  test_dixon_coles.py  test_elo.py  test_ensemble.py  test_evaluation.py  test_features.py  test_prediction_response.py  test_project_bootstrap.py  test_score_matrix.py  test_streamlit_support.py  test_team_normalization.py
